--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/cayorodrigues/busca-cep#readme",
   "dependencies": {
     "angular": "^1.7.5",
+    "angular-resource": "^1.7.5",
+    "angular-route": "^1.7.5",
     "express": "^4.16.4",
-    "mongoose": "^5.3.16"
+    "mongoose": "^5.3.16",
+    "request": "^2.88.0"
   }
 }
